# jubilant-funicular

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: ccpp.yml
docs/html/: AudioManager_8cpp_source.html  AudioManager_8h_source.html  Camera2D_8cpp_source.html  Camera2D_8h_source.html  Compressor_8cpp_source.html  Compressor_8h_source.html  FPSLimiter_8cpp_source.html  FPSLimiter_8h_source.html  FontMap_8cpp_source.html  GLMConsoleOutput_8cpp_source.html  GLMConsoleOutput_8h_source.html  GLSLProgram_8cpp_source.html  GLSLProgram_8h_source.html  GLTexture_8cpp_source.html  GLTexture_8h_source.html  HuffmanLeaf_8cpp_source.html  HuffmanNode_8cpp_source.html  IOManager_8cpp_source.html  IOManager_8h_source.html  InputManager_8cpp_source.html  InputManager_8h_source.html  Logger_8cpp_source.html  Logger_8h_source.html  MyEngine_8cpp_source.html  MyEngine_8h_source.html  ParticleBatch2D_8cpp_source.html  ParticleBatch2D_8h_source.html  ParticleEngine2D_8cpp_source.html  ParticleEngine2D_8h_source.html  PrimitiveBatch_8cpp_source.html  PrimitiveBatch_8h_source.html  Random_8cpp_source.html  Random_8h_source.html  ResourceManager_8cpp_source.html  ResourceManager_8h_source.html  ScreenManager_8cpp_source.html  ScreenManager_8h_source.html  Screen_8cpp_source.html  Screen_8h_source.html  SpriteBatch_8cpp_source.html  (+1381 more)
docs/html/d0/d00/: structTARGAEXT.html  structglm_1_1detail_1_1compute__round.html
docs/html/d0/d01/: geometric_8h__dep__incl.map  geometric_8h__dep__incl.md5
docs/html/d0/d02/: CallbackManager_8cpp__incl.map  CallbackManager_8cpp__incl.md5
docs/html/d0/d09/: type__mat3x3_8inl.html  type__mat3x3_8inl_source.html
docs/html/d0/d0a/: format_8h_source.html  structglm_1_1detail_1_1genType-members.html
docs/html/d0/d0c/: gtx_2quaternion_8hpp.html  gtx_2quaternion_8hpp_source.html
docs/html/d0/d0d/: SpriteFont_8h__dep__incl.map  SpriteFont_8h__dep__incl.md5  structglm_1_1vec_3_014_00_01T_00_01Q_01_4.html
docs/html/d0/d0f/: structUTXIMPORTTABLE-members.html
docs/html/d0/d13/: geometric_8h__incl.map  geometric_8h__incl.md5
docs/html/d0/d18/: classnta_1_1Random-members.html
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+139 more)
docs/latex/: annotated.tex  classnta_1_1Camera2D.tex  classnta_1_1FPSLimiter.tex  classnta_1_1GLSLProgram.tex  classnta_1_1HuffmanLeaf.eps  classnta_1_1HuffmanLeaf.tex  classnta_1_1HuffmanNode.eps  classnta_1_1HuffmanNode.tex  classnta_1_1ImageLoader.tex  classnta_1_1Logger.tex  classnta_1_1ParticleBatch2D.tex  classnta_1_1PrimitiveBatch.tex  classnta_1_1Random.tex  classnta_1_1Screen.tex  classnta_1_1ScreenManager.tex  classnta_1_1SoundEffect.tex  classnta_1_1SystemManager.tex  classnta_1_1Timer.eps  classnta_1_1Timer.tex  classnta_1_1Window.tex  dir_07986ca6bbbd6617f2ceaf29f26c70b9.tex  dir_0906393e9b3beee443cd4fbecbead1c2.tex  dir_0906393e9b3beee443cd4fbecbead1c2_dep.md5  dir_0f0c9650e14de3417111a05bee72b495.tex  dir_0f0c9650e14de3417111a05bee72b495_dep.md5  dir_244253c40bb97f0062fab6ff966cb5ce.tex  dir_2db5254cd235e39208f152c0e2e0e26a.tex  dir_3a4e0404118da882bba96495d8951436.tex  dir_3a4e0404118da882bba96495d8951436_dep.md5  dir_4779897e3bc19206006e9652a9fb128a.tex  dir_4779897e3bc19206006e9652a9fb128a_dep.md5  dir_50ce6fbf41f5d652368929cfd489c9b1.tex  dir_50ce6fbf41f5d652368929cfd489c9b1_dep.md5  dir_632c4d3a283835aa959c088d41d267f8.tex  dir_6dafa9711c96c4bba3e711ab3391dd4f.tex  dir_705e61316ecd01a6a44105293096c0d8.tex  dir_713affbdfb957dba55a2c90490496c80.tex  dir_7c3d714aacb28e054dd2479af7e490ab.tex  dir_7c3d714aacb28e054dd2479af7e490ab_dep.md5  dir_8252e08109891672e43cf001391f0546.tex  (+34 more)
docs/xml/: classnta_1_1AudioManager.xml  classnta_1_1Camera2D.xml  classnta_1_1Compressor.xml  classnta_1_1FPSLimiter.xml  classnta_1_1FontMap.xml  classnta_1_1GLSLProgram.xml  index.xml  structnta_1_1CharGlyph.xml  structnta_1_1FontMap_1_1CharRect.xml
doxygen-theme/: README.md
examples/: CMakeLists.txt
examples/basic_square/: main.cpp
examples/bouncing_balls/: main.cpp  simple2D.vert
examples/dodging_boxes/: GameState.h  ObjectScreen.h  PlayerScreen.h  main.cpp  simple2D.frag
examples/multiple_windows/: main.cpp  simple2D.frag
include/nta/: Animation2D.h  AudioManager.h  CallbackManager.h  Camera2D.h  Component.h  Compressor.h  ContextData.h  DebugBatch.h  ECS.h  Entity.h  Errors.h  Event.h  FPSLimiter.h  FrameBuffer.h  GLMConsoleOutput.h  GLSLProgram.h  GLTexture.h  IDFactory.h  IOManager.h  InputManager.h  InstanceBatch.h  Json.h  LinkedNode.h  Logger.h  Message.h  MyEngine.h  Observer.h  Option.h  ParticleBatch2D.h  ParticleEngine2D.h  Path.h  PrimitiveBatch.h  Random.h  ResourceManager.h  Screen.h  ScreenManager.h  SlotMap.h  Sprite.h  SpriteBatch.h  SpriteFont.h  (+13 more)
src/: Animation2D.cpp  AudioManager.cpp  CMakeLists.txt  CallbackManager.cpp  Camera2D.cpp  Compressor.cpp  ContextData.cpp  DebugBatch.cpp  ECS.cpp  Errors.cpp  FPSLimiter.cpp  FontMap.cpp  FrameBuffer.cpp  GLMConsoleOutput.cpp  GLSLProgram.cpp  GLTexture.cpp  HuffmanLeaf.cpp  HuffmanNode.cpp  IOManager.cpp  InputManager.cpp  InstanceBatch.cpp  Json.cpp  Logger.cpp  MyEngine.cpp  Observer.cpp  ParticleBatch2D.cpp  ParticleEngine2D.cpp  Path.cpp  PrimitiveBatch.cpp  Random.cpp  ResourceManager.cpp  Screen.cpp  ScreenManager.cpp  Semaphore.cpp  Sprite.cpp  SpriteBatch.cpp  SpriteFont.cpp  Subject.cpp  SystemManager.cpp  ThreadPool.cpp  (+9 more)
tests/: CMakeLists.txt  ecs_tests.cpp  event_tests.cpp  result_tests.cpp  wrapper_tests.cpp
tests/utils/: idfactory_tests.cpp  json_tests.cpp  path_tests.cpp  slotmap_tests.cpp  staticvector_tests.cpp  typemap_tests.cpp
(+7368 files in other folders)
